EKS-VPC_helm.yaml
Resources:
 VPC2:
   Type: AWS::EC2::VPC
   Properties:
     CidrBlock: 10.0.0.0/16
     EnableDnsSupport: true
     EnableDnsHostnames: true
     Tags:
       - Key: Name
         Value: EKS-VPC2

 PublicSubnet12:
   Type: AWS::EC2::Subnet
   Properties:
     VpcId: !Ref VPC2
     CidrBlock: 10.0.1.0/24
     AvailabilityZone: !Select [0, !GetAZs '']
     Tags:
       - Key: Name
         Value: PublicSubnet12

 PublicSubnet22:
   Type: AWS::EC2::Subnet
   Properties:
     VpcId: !Ref VPC2
     CidrBlock: 10.0.2.0/24
     AvailabilityZone: !Select [1, !GetAZs '']
     Tags:
       - Key: Name
         Value: PublicSubnet22

 EC2SecurityGroup2:
   Type: AWS::EC2::SecurityGroup
   Properties:
     VpcId: !Ref VPC2
     GroupDescription: Allow SSH access
     GroupName: SG-EKSProject2
     SecurityGroupEgress:
       - IpProtocol: -1
         CidrIp: 0.0.0.0/0
     SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 22
         ToPort: 22
         CidrIp: 0.0.0.0/0

 InternetGateway2:
   Type: AWS::EC2::InternetGateway

 VPCInternetGateway2:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties:
     InternetGatewayId: !Ref InternetGateway2
     VpcId: !Ref VPC2

 RouteTable2:
   Type: AWS::EC2::RouteTable
   Properties:
     VpcId: !Ref VPC2

 Route2:
   Type: AWS::EC2::Route
   Properties:
     DestinationCidrBlock: 0.0.0.0/0
     GatewayId: !Ref InternetGateway2
     RouteTableId: !Ref RouteTable2

 PublicSubnet1RouteTableAssociation2:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     RouteTableId: !Ref RouteTable2
     SubnetId: !Ref PublicSubnet12

 PublicSubnet2RouteTableAssociation2:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     RouteTableId: !Ref RouteTable2
     SubnetId: !Ref PublicSubnet22

 EC2Instance2:
   Type: AWS::EC2::Instance
   Properties:
     AvailabilityZone: us-east-1a
     ImageId: ami-084568db4383264d4
     InstanceType: t2.micro
     KeyName: efs_ec2_key_apir
     NetworkInterfaces: 
       - AssociatePublicIpAddress: "true"
         DeviceIndex: "0"
         GroupSet: 
           - Ref: "EC2SecurityGroup2"
         SubnetId:
           Ref: "PublicSubnet12"
     Tags:
       - Key: Name
         Value: eks-test
     Tenancy: default
     UserData:
       !Base64 |
         #!/bin/bash
         git clone https://github.com/ENPM818N/enpm818n-final.git
         sudo mv enpm818n-final /home/ubuntu
         sudo chmod 777 /home/ubuntu/enpm818n-final/ec2_userdata_helm_sudo
         ./home/ubuntu/enpm818n-final/ec2_userdata_helm_sudo

Outputs:
 VPCId:
   Value: !Ref VPC2
   Export:
     Name: VPC2Id
 PublicSubnet1:
   Value: !Ref PublicSubnet12
   Export:
     Name: PublicSubnet12Id
 PublicSubnet2:
   Value: !Ref PublicSubnet22
   Export:
     Name: PublicSubnet22Id
 InternetGateway:
   Value: !Ref InternetGateway2
   Export:
     Name: InternetGateway2Id
 RouteTable:
   Value: !Ref RouteTable2
   Export:
     Name: RouteTable2Id
 EC2SecurityGroup:
   Value: !Ref EC2SecurityGroup2
   Export:
     Name: EC2SecurityGroup2Id
